--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "start": "nodemon --ignore client/"
   },
   "dependencies": {
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3",
+    "@react-oauth/google": "^0.6.0",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "google-auth-library": "^8.7.0",
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^6.9.0",
+    "nodemon": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
